--- a/package.json
+++ b/package.json
@@ -9,29 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.21.12",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.5",
-    "@mui/x-date-pickers": "^6.7.0",
-    "@types/node": "20.3.1",
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.2.5",
+    "@mui/material": "^5.13.6",
+    "@mui/x-date-pickers": "^6.9.0",
+    "@types/node": "^20.3.2",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.5",
+    "eslint": "^8.43.0",
+    "eslint-config-next": "^13.4.7",
     "mui-tel-input": "^3.2.0",
-    "next": "13.4.5",
+    "next": "^13.4.7",
+    "papaparse": "^5.4.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3",
+    "typescript": "^5.1.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.7",
     "@types/uuid": "^9.0.2"
   }
 }
